# DiffSynth-Studio

./: .gitignore  pyproject.toml
dev/: generate_segments.py  sample_video.py
examples/wanvideo/: wan_14B_flf2v.py
